--- a/ios/IoT/Info.plist
+++ b/ios/IoT/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,5 +51,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Caveat-Bold.ttf</string>
+		<string>Caveat-VariableFont_wght.ttf</string>
+		<string>ChivoMono-Italic-VariableFont_wght.ttf</string>
+	</array>
 </dict>
 </plist>
